common-applications/om/autogpt/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: autogpt
  name: autogpt
