common-applications/om/autogpt/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: autogpt-ingress
  namespace: autogpt
spec:
  tls:
    - hosts:
      - autogpt.osinfra.cn
      secretName: autogpt-reverse-tls
  rules:
    - host: autogpt.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: autogpt-service
            servicePort: 8000
          path: /
